# MacDisher

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  mcdisher.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack-stats.json  webpack.config.js
LoginApp/: forms.py  url.py  views.py
LoginApp/templates/: _login.html  login.html
assets/js/: common.js  index.js
assets/scss/: main.scss
config/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
db-init/: mac_registry.sql
macdisher/: api.py  apps.py  filter.py  forms.py  function.py  models.py  repo.py  response.py  serializers.py  url.py  urls_api.py  views.py
macdisher/fixtures/: formdata.json
macdisher/migrations/: 0001_initial.py
macdisher/templates/: _form_errors.html
macdisher/templates/macdisher/: index.html  reserve.html
macdisher/templates/static/: index_controller.js
macdisher/templatetags/: notification_tags.py
misc/: Insomnia_Production-2023-05-12.json
static/webpack_bundles/: main-89612bec100938836269.css  main-89612bec100938836269.js  main-89612bec100938836269.js.map  main.css
templates/: 404Error.html  _footer.html  _messages.html  _navbar.html  base.html  home.html
templates/registration/: _login.html  login.html
